Switch to guaranteed stable ordered collection